# ocppdemo

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  client.py  pyproject.toml
src/ocppdemo/: __main__.py  config.py  consts.py  datatypes.py  server.py
tests/: test_server.py
